tests/sema/fail/v29_fail_sizeof_non_struct.ep
# COMPILE_FAIL_CONTAINS: sizeof expects user struct type, got u64

fun main(): void {
    let n = sizeof(u64)
}
